# x-Tech

./: .gitignore  CMakeLists.txt  README.md
res/Model/Meteorite/: NHMW-MIN-J2669-Nakhla_low_res.mtl
res/Shader/: basic desktop.frag  basic.frag  basic.vert  gui.frag  gui.vert  model desktop.frag  model desktop.vert  model.frag  model.vert
res/Shaders/: fragmentShader.glsl  vertexShader.glsl
src/demo/: Asteroid.cpp  Asteroid.h  AsteroidSpawner.cpp  AsteroidSpawner.h  Bullet.cpp  Bullet.h  CollisionResponce.cpp  CollisionResponce.h  Controls.cpp  Controls.h  Data.cpp  Data.h  Movement.cpp  Movement.h  Paths.h  Player.cpp  Player.h  Rotator.cpp  Rotator.h  Shoot.cpp  Shoot.h  Star.cpp  Star.h  main.cpp
src/rend/: Cube.cpp  Cube.h  Font.cpp  Font.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Pyramid.cpp  Pyramid.h  Quad.cpp  Quad.h  Shader.cpp  Shader.h  Shape.cpp  Shape.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h  TriangleRenderer.cpp  TriangleRenderer.h  TriangularPrism.cpp  Window.cpp  Window.h  rend.h
src/x-Tech/: 2DGuiRenderer.cpp  2DGuiRenderer.h  2DTransform.cpp  2DTransform.h  Audio.cpp  Audio.h  BoxCollider.cpp  BoxCollider.h  Cache.cpp  Cache.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  Component.cpp  Component.h  Controller.cpp  Controller.h  ControllerCode.h  Core.cpp  Core.h  Debug.cpp  Debug.h  Entity.cpp  Entity.h  Font.cpp  Font.h  Input.cpp  Input.h  InputDevice.cpp  InputDevice.h  Keyboard.cpp  Keyboard.h  Keycode.h  Model.cpp  Model.h  ModelRenderer.cpp  ModelRenderer.h  Mouse.cpp  Mouse.h  (+30 more)
